--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@aws-sdk/client-s3": "^3.726.1",
     "@aws-sdk/lib-dynamodb": "^3.726.1",
     "@aws-sdk/util-dynamodb": "^3.726.1",
+    "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "joi": "^17.13.3"
